# bank

./: CMakeLists.txt  README.md  customers.csv
include/: account.h  customer.h  transaction.h
src/: account.c  customer.c  main.c  transaction.c
